# skeletos

./: README.md  skeletos.cabal
src/: Main.hs  Skeletos.hs
src/Main/Type/: OptionsConfig.hs
src/Skeletos/: ShowOpt.hs
src/Skeletos/Internal/: Utils.hs
src/Skeletos/Type/: CIText.hs  Config.hs  Define.hs  Query.hs  TemplateType.hs
