name:                 skeletos
version:              0.1.0.0
synopsis:
  Create skeleton project, file or code snippet from a template
-- description:
homepage:             https://github.com/trskop/skeletos
license:              BSD3
license-file:         LICENSE
author:               Peter Trško
maintainer:           peter.trsko@gmail.com
copyright:            (c) 2014, Peter Trško
category:             Development
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:
    ChangeLog.md
  , README.md

flag pedantic
  description:
    Pass additional warning flags including -Werror to GHC during compilation.
  default:              False
  manual:               True

library
  hs-source-dirs:       src

  exposed-modules:
      Skeletos
    , Skeletos.Internal.Utils
    , Skeletos.ShowOpt
    , Skeletos.Type.Config
    , Skeletos.Type.Define
    , Skeletos.Type.Query

  default-language:     Haskell2010
  other-extensions:
      CPP
    , DeriveDataTypeable
    , DeriveGeneric
    , NoImplicitPrelude
    , OverloadedStrings

  build-depends:
    -- {{{ Distributed with GHC or Haskell Platform ---------------------------
      base >=4.7 && <4.8
    , text >=1.1 && <1.2
    , containers >=0.5 && <0.6
    -- }}} Distributed with GHC or Haskell Platform ---------------------------

    , data-default-class ==0.0.*
    , lens >=3.9
    -- ^ Same dependency as strict-base-types 0.3.0.
    , strict-base-types ==0.3.*

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
--    -Werror

executable skeletos
  hs-source-dirs:       src
  main-is:              Main.hs

  -- other-modules:

  default-language:     Haskell2010
  other-extensions:
      CPP
    , DeriveDataTypeable
    , DeriveGeneric
    , NoImplicitPrelude

  build-depends:
    -- {{{ Distributed with GHC or Haskell Platform ---------------------------
      base >=4.7 && <4.8
    , text >=1.1 && <1.2
    -- }}} Distributed with GHC or Haskell Platform ---------------------------

    , skeletos ==0.1.0.0

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
--    -Werror
